--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "password":"Password.123",
     "server": "192.168.1.3",
     "port": 1883,
-    "timeout": 60
+    "timeout": 60,
+    "topic": "thereds-dev/data"
 }
   
