--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
     "server": "192.168.1.3",
     "port": 1883,
     "timeout": 60,
-    "topic": "thereds-dev/data"
+    "topic": "thereds-dev/CPU-Temp"
 }
   
