--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-    "username": "your_username",
-    "password": "your__password",
-    "server": "your_mqqt_server_ip_or_fqdn",
-    "port": "your_server_tcp_port",
-    "timeout": "your_server_timeout",
-    "topic": "your_topic"
+    "username":"mqtt_user",
+    "password":"Password.123",
+    "server": "192.168.1.3",
+    "port": 1883,
+    "timeout": 60,
+    "topic": "thereds-dev/CPU-Temp"
 }
+  
